# transcrptr

./: PRIVACY.md  README.md  package-lock.json  package.json
.github/workflows/: build-macos.yml  build-windows.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  samples_debug.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: application_loopback.rs  audio.rs  lib.rs
