[package]
name = "tauri-app"
version = "0.1.13"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
hound = "3.5.1"
futures-util = "0.3.32"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15.1", features = ["vulkan"] }

